--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>CRT CheerpJ Display</title>
+    <title></title>
     <script src="https://cjrtnc.leaningtech.com/4.0/loader.js"></script>
     <style>
       :root {
