--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<!DOCTYPE html>
+<body>
+  <main class="crt">
+    <div class="wrapper">
+      <span class="code">
+        <span class="pink">import</span> <span class="lightblue">{ home }</span> from <span class="yellow">'./_site/home/'</span>;</span><span class="cursor">_</span>
+
+    </div>
+    </div>
+<!-- <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>You're So Forgetful</title>
@@ -63,3 +71,4 @@
   </script>
 </body>
 </html>
+-->
