--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
         white-space: nowrap;
         overflow-x: hidden;
       ">
-        <span style="color: pink;">import</span>
-        <span style="color: lightblue;">{ home }</span> 
-        from 
-        <span style="color: yellow;">'./_site/home/'</span>;
+     <span style="color: green;">404: youresoforgetful.jar not found /n faq coming soon, subscribe to my newsletter to get sporadic and infrequent updates.</span>;
       </span>
       <span style="display: inline-block; animation: blinkTextCursor 500ms infinite normal;">_</span>
     </div>
