--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         overflow-x: hidden;
       ">
      <span style="color: green;">404: youresoforgetful.jar not found</span>;
-      
+      <br>
+        <br>
       <span style="color: green;">faq coming soon, subscribe to my newsletter to get </span>
        <span style="color: green;">sporadic and infrequent updates.</span>
       <span style="display: inline-block; animation: blinkTextCursor 500ms infinite normal;">_</span>
@@ -85,12 +86,7 @@
     Your email:
     <input type="email" name="email">
   </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
+  <button type="submit">Sign-Up</button>
 </form>
 
   <!-- Animations must remain in <style> or be moved to JS; they cannot be done purely inline -->
